# cpp-examples

./: README.md
build_systems/01-bare-Makefile/: Makefile
build_systems/01-bare-Makefile/include/: Penguin.h
build_systems/01-bare-Makefile/src/: Penguin.cpp  main.cpp
build_systems/02_CMake/: CMakeLists.txt  Makefile  README.md
build_systems/02_CMake/config/: easylogging.conf
build_systems/02_CMake/include/: Person.h
build_systems/02_CMake/libs/: .gitignore  install_easyloggingpp.sh  install_googletest.sh  install_libs.sh
build_systems/02_CMake/src/: Person.cpp  main.cpp
build_systems/02_CMake/tests/: person_tests.cpp
build_systems/03_Bazel/: .gitignore  BUILD  README.md  hello_shell.sh
